# PlantCare.API/PlantCare.API.Client/swagger.json
@@ -10,6 +10,7 @@
         "tags": [
           "Distributor"
         ],
+        "operationId": "GetDistributors",
         "responses": {
           "200": {
             "description": "OK",
@@ -66,6 +67,7 @@
         "tags": [
           "Distributor"
         ],
+        "operationId": "CreateDistributor",
         "requestBody": {
           "content": {
             "application/json": {
@@ -134,6 +136,7 @@
         "tags": [
           "Distributor"
         ],
+        "operationId": "GetDistributor",
         "parameters": [
           {
             "name": "id",
@@ -194,6 +197,7 @@
         "tags": [
           "Distributor"
         ],
+        "operationId": "AddPlantToDistributor",
         "parameters": [
           {
             "name": "distributorId",
@@ -277,6 +281,7 @@
         "tags": [
           "Distributor"
         ],
+        "operationId": "WaterSupply",
         "parameters": [
           {
             "name": "id",
